--- a/tools/cfgs/kitti_models/ia-ssd.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd.yaml
@@ -52,7 +52,7 @@ MODEL:
 
     POINT_HEAD:
         NAME: IASSD_Head
-        IOU_FC: [256, 256]
+        # IOU_FC: [256, 256]
         CLS_FC: [256, 256]
         REG_FC: [256, 256]
         CLASS_AGNOSTIC: False
@@ -85,11 +85,12 @@ MODEL:
             LOSS_INS: WeightedCrossEntropy
             SAMPLE_METHOD_LIST: *sample_method_list
             LOSS_VOTE_TYPE: 'none'  #'none', 'ver1', 'ver2', 
+            LOSS_REG_TYPE: 'iou' #'iou'
 
             CORNER_LOSS_REGULARIZATION: True
             CENTERNESS_REGULARIZATION: True
             CENTERNESS_REGULARIZATION_SA: True
-            IOU3D_REGULARIZATION: True
+            # IOU3D_REGULARIZATION: True
             LOSS_WEIGHTS: {
                 'ins_aware_weight': [0, 1.0, 1.0],
                 'vote_weight': 1.0,
@@ -98,7 +99,8 @@ MODEL:
                 'corner_weight': 1.0,
                 'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0],
                 'dir_weight': 0.2,
-                'iou3d_weight': 1.0
+                'iou3d_reg_weight': 0.5
+                # 'iou3d_weight': 1.0
             }
 
 
@@ -107,12 +109,12 @@ MODEL:
         RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
         SCORE_THRESH: 0.1
         OUTPUT_RAW_SCORE: False
-        IOU_SUPRESS: True
+        # IOU_SUPRESS: True
 
         EVAL_METRIC: kitti
 
         NMS_CONFIG:
-            ALPHA: 0.75
+            # ALPHA: 0.75
             MULTI_CLASSES_NMS: False
             NMS_TYPE: nms_gpu
             NMS_THRESH: 0.01
@@ -122,7 +124,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 8
-    NUM_EPOCHS: 120
+    NUM_EPOCHS: 80
 
     OPTIMIZER: adam_onecycle
     LR: 0.01
