--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,8 @@ line-length = 100
 [tool.pylint.'MESSAGES CONTROL']
 disable = ['missing-docstring']
 
+[tool.pylint.TYPECHECK]
+generated-members = 'numpy.*,torch.*'
+
 [tool.isort]
 profile = 'black'
