fix: use register_buffer for tensor info

--- a/tools/cfgs/kitti_models/ia-ssd.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd.yaml
@@ -69,19 +69,17 @@ MODEL:
       GT_EXTRA_WIDTH: [0.2, 0.2, 0.2]
 
       ASSIGN_METHOD:
-        NAME: "extend_gt"
-        ASSIGN_TYPE: "centers_origin"  # 'centers'(default) ,  'centers_origin'
+        NAME: extend_gt
+        ASSIGN_TYPE: centers_origin  # 'centers'(default) ,  'centers_origin'
         EXTRA_WIDTH: [1.0, 1.0, 1.0]
         FG_PC_IGNORE: false
 
       # 'PointBinResidualCoder', 'PointResidual_BinOri_Coder'
       BOX_CODER: PointResidual_BinOri_Coder
       BOX_CODER_CONFIG:
-        {
-          "angle_bin_num": 12,
-          "use_mean_size": true,
-          "mean_size": [[3.9, 1.6, 1.56], [0.8, 0.6, 1.73], [1.76, 0.6, 1.73]],
-        }
+        angle_bin_num: 12
+        use_mean_size: true
+        mean_size: [[3.9, 1.6, 1.56], [0.8, 0.6, 1.73], [1.76, 0.6, 1.73]]
 
     LOSS_CONFIG:
       # Ref: 'WeightedBinaryCrossEntropy', 'WeightedCrossEntropy', 'FocalLoss'
@@ -89,7 +87,7 @@ MODEL:
       LOSS_REG: WeightedSmoothL1Loss
       LOSS_INS: WeightedCrossEntropy
       SAMPLE_METHOD_LIST: *sample_method_list
-      LOSS_VOTE_TYPE: "none"  # 'none', 'ver1', 'ver2',
+      LOSS_VOTE_TYPE: none  # 'none', 'ver1', 'ver2',
 
       CORNER_LOSS_REGULARIZATION: true
       CENTERNESS_REGULARIZATION: true
@@ -105,7 +103,7 @@ MODEL:
 
   POST_PROCESSING:
     # 'normal'(default), 'detail', 'speed'(no recall info)
-    RECALL_MODE: "normal"
+    RECALL_MODE: normal
     RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
     SCORE_THRESH: 0.1
     OUTPUT_RAW_SCORE: false
