--- a/environment.yaml
+++ b/environment.yaml
@@ -7,6 +7,7 @@ dependencies:
   - pytorch
   - tensorboard
   - cudatoolkit=11.3
+  - python=3.8
   # spconv requirements
   - fire
   - lark
@@ -22,6 +23,7 @@ dependencies:
   - numba
   - scikit-image
   - sharedarray
+  - tabulate
   - tqdm
   - wget
   # Linter
