--- a/tools/cfgs/kitti_models/ia-ssd_pure.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd_pure.yaml
@@ -83,7 +83,7 @@ MODEL:
             LOSS_REG: WeightedSmoothL1Loss
             LOSS_INS: WeightedCrossEntropy
             SAMPLE_METHOD_LIST: *sample_method_list
-            LOSS_VOTE_TYPE: 'none'  #'none', 'ver1', 'ver2', 
+            LOSS_VOTE_TYPE: 'ver2'  #'none', 'ver1', 'ver2', 
 
             CORNER_LOSS_REGULARIZATION: True
             CENTERNESS_REGULARIZATION: True
