--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,14 @@ version = { attr = 'pcdet.__version__' }
 [tool.black]
 line-length = 100
 
-[tool.pylint.'MESSAGES CONTROL']
-disable = ['missing-docstring']
-
-[tool.pylint.TYPECHECK]
-generated-members = 'numpy.*,torch.*'
-
 [tool.isort]
 profile = 'black'
+
+[tool.pylint.main]
+extension-pkg-allow-list = ['pcdet.ops.*._C']
+
+[tool.pylint.messages_control]
+disable = ['missing-docstring']
+
+[tool.pylint.typecheck]
+generated-members = 'numpy.*,torch.*'
