--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,29 @@
-FROM pytorch/pytorch:1.11.0-cuda11.3-cudnn8-devel as builder
+FROM mambaorg/micromamba:latest as builder
+
+# Split PyTorch to use with runtime
+RUN micromamba install -y -n base -c pytorch -c conda-forge \
+	cudatoolkit=11.6 pytorch python=3.9 &&\
+	micromamba clean -y --all
+
+RUN micromamba install -y -n base -c nvidia/label/cuda-11.6.2 -c conda-forge \
+	cuda-toolkit gxx=11 git ninja pip setuptools &&\
+	micromamba clean -y --all
 
 ARG CUDA_ARCH
-RUN conda install -y --channel conda-forge git ninja pip setuptools &&\
-	git clone https://github.com/ncakhoa/Thesis2022.git &&\
+RUN cd ~ && git clone --branch recall --single-branch https://github.com/ncakhoa/Thesis2022.git &&\
 	TORCH_CUDA_ARCH_LIST=$CUDA_ARCH pip install \
 	--no-build-isolation --no-cache-dir --no-deps --upgrade --editable ./Thesis2022 &&\
-	rm -rf ./Thesis2022/build &&\
-	conda clean -y --all
+	rm -rf ./Thesis2022/build
 
 FROM mambaorg/micromamba:latest
 
-RUN micromamba install -y --name base --channel pytorch --channel conda-forge \
-	tensorboard pytorch cudatoolkit=11.3 python=3.8 &&\
+RUN micromamba install -y -n base -c pytorch -c conda-forge \
+	cudatoolkit=11.6 pytorch python=3.9 &&\
 	micromamba clean -y --all
 
-RUN micromamba install -y --name base --channel conda-forge \
-	fire kornia lark numba pip portalocker pybind11 tabulate \
-	easydict scikit-image sharedarray tqdm &&\
-	micromamba install -y --name base --channel conda-forge gdown git rclone tmux vim &&\
+RUN micromamba install -y -n base --c conda-forge \
+	easydict numba scikit-image sharedarray tabulate tensorboard tqdm &&\
+	micromamba install -y -n base -c conda-forge gdown git rclone tmux vim &&\
 	micromamba shell init --shell=bash --prefix=$MAMBA_ROOT_PREFIX &&\
 	micromamba clean -y --all
 
@@ -32,11 +38,10 @@ RUN --mount=target=/tmp/context,source=. \
 	rm -rf /var/lib/apt/lists/*
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
-RUN --mount=target=/tmp/builder,source=/workspace,from=builder \
+RUN --mount=target=/tmp/builder,source=/home/mambauser,from=builder \
 	cp -r /tmp/builder/Thesis2022 ~ &&\
-	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/easy-install.pth &&\
-	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/pcdet.egg-link &&\
-	pip install --no-cache-dir --upgrade spconv-cu113
+	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.9/site-packages/easy-install.pth &&\
+	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.9/site-packages/pcdet.egg-link
 
 WORKDIR /root/Thesis2022/tools
 CMD ["~/start.sh"]
