--- a/tools/cfgs/kitti_models/ia-ssd-car.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd-car.yaml
@@ -1,5 +1,5 @@
 ---
-CLASS_NAMES: [Car, Pedestrian, Cyclist]
+CLASS_NAMES: [Car]
 
 DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
@@ -19,7 +19,7 @@ DATA_CONFIG:
         test: false
 
 MODEL:
-  NAME: IASSDLayerNorm
+  NAME: IASSDNet
 
   enc_cfg:
     in_channels: 1
@@ -50,6 +50,7 @@ MODEL:
   head_cfg:
     in_channels: 512
     mid_channels: 256
+    # IOU_FC: [256, 256]
     gt_ext_dims: [0.2, 0.2, 0.2]
     org_ext_dims: [1.0, 1.0, 1.0]
 
